nova função de tour guiado
Agora os usuários do site terão a função de tour guiado pelas áreas do sistema. Basta clicar no botão "Help" e um tour guiado começará mostrando ao usuário as principais funções de cada área.

--- a/public/login.html
+++ b/public/login.html
@@ -8,6 +8,11 @@
   <link rel="stylesheet" href="resources/bootstrap/css/bootstrap.min.css">
   <!-- Carregando arquivos da biblioteca AST-Notif. Créditos: https://github.com/anandastoon/AST-Notif -->
   <link rel="stylesheet" href="resources/AST-Notif/css/ast-notif.min.css">
+  <!-- Carregando arquivos da biblioteca driver.js. Créditos: https://github.com/kamranahmedse/driver.js -->
+    <script defer src="../resources/driver/driver.min.js"></script>
+    <script defer src="../js/tour.js"></script>
+  <!-- Carregando arquivos da biblioteca driver.js. Créditos: https://github.com/kamranahmedse/driver.js -->
+  <link rel="stylesheet" href="resources/driver/driver.min.css">
   <link rel="shortcut icon" href="images/domain.png" type="image/x-icon">
 
   <link rel="stylesheet" href="css/loader.css">
@@ -66,6 +71,9 @@
             <li class="nav-item">
               <a class="nav-link" href="professores/">Professores</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" id="help" onclick="iniciaTour(usuarioAtual())">Help</a>
+            </li>
           </ul>
         </div>
       </nav>
@@ -76,8 +84,10 @@
     <div class="loader"></div>
 </div>
   <!-- Parte principal -->
+
   <div class="modal" tabindex="-1" role="dialog" id="modal">
     <div class="modal-dialog" role="document">
+      
       <div class="modal-content">
         <div class="modal-header">
           <h5 class="modal-title" id="titulo">Modal title</h5>
@@ -95,6 +105,7 @@
       </div>
     </div>
   </div>
+
   <div class="container">
     <small class="text-muted">Use o navegador Chrome para evitar incompatibilidades. <a href="https://www.google.com/chrome/" target="_blank">Site para download do chrome</a></small>
     <div class="container" id="loginContainer" style="display: none;">
@@ -110,7 +121,7 @@
           </div>
           <button type="submit" class="btn btn-primary btn-block" id="btnEntrar">Entrar</button>
           <small id="cadastrarEntrar" class="form-text text-muted">
-            <a href="#" onclick="liberaAreaCadastro()" id="toggleCadastrarEntrar">Quero me cadastrar</a>
+            <a style="text-decoration: underline; color: blue;" onclick="liberaAreaCadastro()" id="toggleCadastrarEntrar">Quero me cadastrar</a>
           </small>
         </div>
         <div id="cadastroNovoUsuario" style="display: none;">
@@ -139,7 +150,7 @@
           </div>
           <button type="submit" class="btn btn-primary btn-block" id="btnCadastrar" disabled>Cadastrar</button>
           <small id="cadastrarEntrar" class="form-text text-muted">
-            <a href="#" onclick="liberaAreaCadastro(false)" id="entrarCadastrar">Quero entrar no sistema</a>
+            <a style="text-decoration: underline; color: blue;" onclick="liberaAreaCadastro(false)" id="entrarCadastrar">Quero entrar no sistema</a>
           </small>
         </div>
       </form>
@@ -147,10 +158,10 @@
     <div id="logado" class="container" style="visibility: hidden; margin-top: 5px;">
       <div class="row">
           <div class="col-sm-6">
-          <div class="card">
+          <div class="card" id="cardUser">
               <div class="card-body">
               <h5 class="card-title" id="nome">Nome</h5>
-              <a href="#" onclick="alteraFoto()"><img src="./images/profile_placeholder.png" id="foto" class="rounded float-left" width="80px" style="margin-right: 10px;"></a>
+              <a style="text-decoration: underline; color: blue;" onclick="alteraFoto()"><img src="./images/profile_placeholder.png" id="foto" class="rounded float-left" width="80px" style="margin-right: 10px;"></a>
               <label class="card-text" id="email" style="font-size: small;">Email</label>
               <br><label class="card-text" id="statusVerificacao" style="font-size: small;"></label>
               <br>
@@ -169,7 +180,7 @@
           <div class="card">
               <div class="card-body">
                 <h5 class="card-title">Painel do administrador</h5>
-              <button onclick="listaUsuarios()" class="btn btn-block btn-primary">Gerenciar usuários do sistema</button>
+              <button onclick="listaUsuarios()" id="gerenciaUsuarios" class="btn btn-block btn-primary">Gerenciar usuários do sistema</button>
               </div>
           </div>
           </div>
@@ -180,6 +191,10 @@
 
   <!-- Carregando outros arquivos da biblioteca AST-Notif. Créditos: https://github.com/anandastoon/AST-Notif -->
   <script defer src="resources/AST-Notif/js/ast-notif.min.js"></script>
+  <!-- Carregando arquivos da biblioteca driver.js. Créditos: https://github.com/kamranahmedse/driver.js -->
+  <script src="resources/driver/driver.min.js"></script>
+  <script src="js/tour.js"></script>
+
 
   <!-- Outros Arquivos -->
   <script defer src="js/app.js"></script>
