--- a/public/secretaria/index.html
+++ b/public/secretaria/index.html
@@ -22,6 +22,8 @@
 
       <!-- Carregando arquivos da biblioteca AST-Notif. Créditos: https://github.com/anandastoon/AST-Notif -->
     <link rel="stylesheet" href="../resources/AST-Notif/css/ast-notif.min.css">
+    <!-- Carregando arquivos da biblioteca driver.js. Créditos: https://github.com/kamranahmedse/driver.js -->
+    <link rel="stylesheet" href="../resources/driver/driver.min.css">
     <link rel="shortcut icon" href="../images/domain.png" type="image/x-icon">
   </head>
 
@@ -1343,6 +1345,10 @@
     <script defer src="../js/chat.js"></script>
     <!-- Carregando outros arquivos da biblioteca AST-Notif. Créditos: https://github.com/anandastoon/AST-Notif -->
     <script defer src="../resources/AST-Notif/js/ast-notif.min.js"></script>
+
+    <!-- Carregando arquivos da biblioteca driver.js. Créditos: https://github.com/kamranahmedse/driver.js -->
+    <script defer src="../resources/driver/driver.min.js"></script>
+    <script defer src="../js/tour.js"></script>
 
 
     <!-- Graphs 
