--- a/public/secretaria/index.html
+++ b/public/secretaria/index.html
@@ -182,6 +182,9 @@
             <li class="nav-item">
               <a class="nav-link" href="../professores/">&nbsp;&nbsp;Professores</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" onclick="tourSecretaria()">&nbsp;&nbsp;Help</a>
+            </li>
           </ul>
         </div>
       </nav>
@@ -256,10 +259,10 @@
       </div>
       <div class="row">
         <nav class="col-md-2 d-none d-md-block bg-light sidebar">
-          <div class="sidebar-sticky">
+          <div class="sidebar-sticky" id="sidebar">
             <ul class="nav flex-column">
               <li class="nav-item">
-                <a class="nav-link active" data-toggle="list" href="#abaDashboard" role="tab" aria-controls="home">
+                <a class="nav-link active" data-toggle="list" href="#abaDashboard" role="tab" aria-controls="home" id="btnAbaDashboard">
                   <span data-feather="home"></span>
                   Dashboard <span class="sr-only">(current)</span>
                 </a>
@@ -277,13 +280,13 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" data-toggle="list" href="#abaCadastrarTurmas" role="tab" aria-controls="CadastrarTurmas" onclick="carregaProfessores()">
+                <a class="nav-link" data-toggle="list" href="#abaCadastrarTurmas" role="tab" aria-controls="CadastrarTurmas" onclick="carregaProfessores()" id="btnCadastrarTurmas">
                   <span data-feather="plus-square"></span>
                   Cadastrar turmas
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" data-toggle="list" href="#abaCadastrarAlunos" role="tab" aria-controls="CadastrarAlunos" onclick="carregaProfsETurmas()">
+                <a class="nav-link" data-toggle="list" href="#abaCadastrarAlunos" role="tab" aria-controls="CadastrarAlunos" onclick="carregaProfsETurmas()" id="btnCadastrarAlunos">
                   <span data-feather="user-plus"></span>
                   Cadastrar alunos
                 </a>
@@ -295,7 +298,7 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" data-toggle="list" href="#abaEnviarNotificacoes" role="tab" id="btnAbaAlunosDesativados" aria-controls="alunosDesativados">
+                <a class="nav-link" data-toggle="list" href="#abaEnviarNotificacoes" role="tab" id="btnAbaEnviarNotificacoes" aria-controls="alunosDesativados">
                   <span data-feather="send"></span>
                   Enviar notificações
                 </a>
@@ -324,7 +327,7 @@
         </nav>
        
 
-        <main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4">
+        <main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4" id="telaPrincipalSecretaria">
           <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3 border-bottom">
             <h1 class="h2">Secretaria</h1>
             <div class="btn-toolbar mb-2 mb-md-0">
@@ -472,7 +475,7 @@
                     </div>
                   </div> 
                 </div>
-                <div class="container-xl">
+                <div class="container-xl" id="tabelaAlunos">
                   <div class="table-responsive">
                     <div class="table-wrapper">
                       <div class="table-title">
