--- a/public/secretaria/index.html
+++ b/public/secretaria/index.html
@@ -329,7 +329,7 @@
 
         <main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4" id="telaPrincipalSecretaria">
           <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3 border-bottom">
-            <h1 class="h2">Secretaria</h1>
+            <h1 class="h2" id="tituloSecretaria">Secretaria</h1>
             <div class="btn-toolbar mb-2 mb-md-0">
               <!--<div class="btn-group mr-2">
                 <button class="btn btn-sm btn-outline-secondary">Share</button>
