--- a/public/secretaria/index.html
+++ b/public/secretaria/index.html
@@ -98,7 +98,7 @@
       <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title" id="titulo">Adicionar Livro</h5>
+            <h5 class="modal-title" id="titulo">Adicionar Curso</h5>
             <!-- <button type="button" class="close" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">&times;</span>
             </button> -->
@@ -1053,6 +1053,14 @@
                     <label for="inputAddress">Horário</label>
                     <input type="text" readonly class="form-control" id="horaAluno" name="horaAluno">
                   </div>
+                  <div class="form-group col-auto">
+                    <label for="inputAddress">Professor</label>
+                    <input type="text" readonly class="form-control" id="nomeProfAluno" name="nomeProfAluno">
+                  </div>
+                  <div class="form-group col-auto">
+                    <label for="inputAddress">E-mail do Professor</label>
+                    <input type="text" readonly class="form-control" id="emailProfAluno" name="emailProfAluno">
+                  </div>
                   
                 </div>
                 <hr>
@@ -1408,7 +1416,7 @@
                 <div class="container-xl">
                   <div class="table-responsive">
                     <div class="table-wrapper">
-                      <div class="table-title" style="background-color: darkblue;">
+                      <div class="table-title">
                         <div class="row">
                           <div class="col-sm-6">
                             <h2>Livros <b>Cadastrados</b></h2>
