--- a/public/resources/pdfsProntos/modeloBoletim.html
+++ b/public/resources/pdfsProntos/modeloBoletim.html
@@ -378,7 +378,7 @@ a:visited {text-decoration:none;}
 				}
 				firebase.database().ref('sistemaEscolar/infoEscola').once('value').then(infos => {
 					firebase.database().ref(`sistemaEscolar/alunos/${matricula}`).once('value').then(snapshot => {
-						let dadosEscola = info.val()
+						let dadosEscola = infos.val()
 						let dadosAluno = snapshot.val()
 						let historicoEscolar = dadosAluno.historicoEscolar[key]
 						let notas = historicoEscolar.infoAluno.notas
@@ -405,6 +405,22 @@ a:visited {text-decoration:none;}
 						}
 
 						escolaBoletim.innerText = dadosEscola.dadosBasicos.nomeEscola
+						cursoBoletim.innerText = dadosEscola.cursos[historicoEscolar.infoAluno.curso].nomeCurso
+
+						semestreLivroBoletim.innerText = historicoEscolar.infoAluno.nomePeriodo + ' - '
+						let c = 0
+						for (const i in historicoEscolar.infoAluno.livros) {
+							if (c >= 1) {
+								semestreLivroBoletim.innerText += ' | '
+							}
+							
+							if (Object.hasOwnProperty.call(historicoEscolar.infoAluno.livros, i)) {
+								const codLivroSistema = historicoEscolar.infoAluno.livros[i];
+								semestreLivroBoletim.innerText += dadosEscola.livros[codLivroSistema].idLivro 
+							}
+							
+							c++
+						}
 					}).catch(error => {
 						console.log(error)
 					})
