--- a/public/professores/index.html
+++ b/public/professores/index.html
@@ -69,6 +69,26 @@
       </div>
     </div>
 
+    <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" id="boletimModal">
+      <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="tituloBoletim">Boletim Escolar - PDF</h5>
+            <!-- <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button> -->
+          </div>
+          <div class="modal-body" id="corpoBoletim">
+            
+          </div>
+          <div class="modal-footer" id="botoesBoletim">
+            <button type="button" class="btn btn-primary" onclick="window.frames['boletimPdf'].focus(), window.frames['boletimPdf'].print()">Imprimir</button>
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
     
 
           <!-- Inicialização do Firebase -->
@@ -564,17 +584,8 @@
               <div id="areaInfoTurma" style="visibility: hidden;">
                 <label class="h3" id="infoTurma">Turma</label>
                 <label class="text-muted float-right h5" id="codigoDaTurma"></label>
-                <div class="row">
-                  <div class="col-md-auto">
-                    <h6>Faixa etária</h6>
-                    <div class="row">
-                      &nbsp;&nbsp;&nbsp;<div class="list-group" id="mostraFaixa" role="tablist">
-                        <a class="list-group-item list-group-item-action" data-toggle="list" id="nivelKIDS" href="#kids" role="tab" onclick="faixa('KIDS')">KIDS</a>
-                        <a class="list-group-item list-group-item-action" data-toggle="list" id="nivelT" href="#teens" role="tab" onclick="faixa('T')">TEENS</a>
-                        <a class="list-group-item list-group-item-action" data-toggle="list" id="nivelA" href="#adults" role="tab" onclick="faixa('A')">ADULTS</a>
-                      </div>
-                    </div>
-                  </div>
+                <hr>
+                <div class="row">  
                   <div class="col-md-auto">
                     <label id="mostraDiasTurma"></label>
                     <br>
@@ -589,6 +600,7 @@
                     </div>
                   </div>
                 </div>
+                <hr>
                 <div class="container">
                   <div class="row">
                     <div class="form-group col-auto">
