--- a/public/secretaria/index.html
+++ b/public/secretaria/index.html
@@ -213,7 +213,7 @@
                   </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" data-toggle="list" href="#abaAlunos" role="tab" aria-controls="alunos" id="btnAbaAlunosResponsivo" onclick="carregaListaDeAlunos()">
+                  <a class="nav-link" data-toggle="list" href="#abaAlunos" role="tab" aria-controls="alunos" id="btnAbaAlunosResponsivo" onclick="carregaListaDeAlunos(), dragDropJaCadastrado()">
                     <span data-feather="users" ></span>
                     Alunos
                   </a>
@@ -231,7 +231,7 @@
                   </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" data-toggle="list" href="#abaCadastrarAlunos" role="tab" aria-controls="CadastrarAlunos" onclick="carregaProfsETurmas()">
+                  <a class="nav-link" data-toggle="list" href="#abaCadastrarAlunos" role="tab" aria-controls="CadastrarAlunos" onclick="carregaProfsETurmas(), dragDropCadastroAluno()">
                     <span data-feather="user-plus"></span>
                     Cadastrar alunos
                   </a>
@@ -358,7 +358,7 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" data-toggle="list" href="#abaAlunos" role="tab" aria-controls="alunos" id="btnAbaAlunos" onclick="carregaListaDeAlunos()">
+                <a class="nav-link" data-toggle="list" href="#abaAlunos" role="tab" aria-controls="alunos" id="btnAbaAlunos" onclick="carregaListaDeAlunos(), dragDropJaCadastrado()">
                   <span data-feather="users" ></span>
                   Alunos
                 </a>
@@ -376,7 +376,7 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" data-toggle="list" href="#abaCadastrarAlunos" role="tab" aria-controls="CadastrarAlunos" onclick="carregaProfsETurmas()" id="btnCadastrarAlunos">
+                <a class="nav-link" data-toggle="list" href="#abaCadastrarAlunos" role="tab" aria-controls="CadastrarAlunos" onclick="carregaProfsETurmas(), dragDropCadastroAluno()" id="btnCadastrarAlunos">
                   <span data-feather="user-plus"></span>
                   Cadastrar alunos
                 </a>
@@ -773,6 +773,19 @@
                     </div>
                     <hr>
                       <!-- Mostra Arquivos -->
+                      <label class="h6">Envio de documentos pessoais</label>
+                      <p>Aqui podem ser enviados os documentos como Identidade, CPF, Comprovante de Residência e outros que achar pertinente.
+                      <div id="drop-area-ja-cadastrado" class="drop-area">
+                        <section class="my-form">
+                          <p><b>Arraste e solte</b> os arquivos para enviar </p> ou
+                          <input type="file" id="fileElemJaCadastrado" class="fileElem" multiple>
+                          
+                          <label class="button" for="fileElemJaCadastrado">Escolher arquivos...</label>
+                        </section>
+                        <div class="progress" style="position: relative;">
+                          <div class="progress-bar" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" id="progress">0%</div>
+                        </div>
+                      </div>
                       <div class="content">
                         <div class="container">
                             <div class="row">
@@ -1108,12 +1121,12 @@
                 <hr>
                 <label class="h6">Envio de documentos pessoais</label>
                 <p>Aqui podem ser enviados os documentos como Identidade, CPF, Comprovante de Residência e outros que achar pertinente. Não é obrigatório fazê-lo agora. <br> Você poderá <b>alterar e enviar</b> documentos depois no <b>cadastro do aluno</b>.</p>
-                <div id="drop-area">
+                <div id="drop-area" class="drop-area">
                   <section class="my-form">
                     <p><b>Arraste e solte</b> os arquivos para enviar </p> ou
-                    <input type="file" id="fileElem" multiple onchange="arquivosSelecionados(this.files)">
+                    <input type="file" id="fileElemCadastroAluno" class="fileElem" multiple>
                     
-                    <label class="button" for="fileElem">Escolher arquivos...</label>
+                    <label class="button" for="fileElemCadastroAluno">Escolher arquivos...</label>
                   </section>
                   <div class="progress" style="position: relative;">
                     <div class="progress-bar" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" id="progress">0%</div>
