--- a/public/secretaria/index.html
+++ b/public/secretaria/index.html
@@ -795,6 +795,9 @@
                                             <div class="col-lg-6 col-xl-6">
                                                 <h4 class="header-title m-b-30">Arquivos do Aluno</h4>
                                             </div>
+                                            <div class="col">
+                                              <button onclick="carregaArquivosAluno(document.getElementById('mostraMatriculaAluno').innerText)" class="btn btn-sm btn-info float-md-right"><span data-feather="refresh-cw"></span> Atualizar arquivos</button>
+                                            </div>
                                         </div>
                     
                                         <div class="row" id="listaArquivosAluno">
