Cadastro de responsáveis autorizados
Agora já é possível cadastrar responsáveis autorizados na aba da Secretaria.

--- a/public/index.html
+++ b/public/index.html
@@ -118,11 +118,9 @@
       <h1 class="display-4">Bem vindo!</h1>
       <p class="lead">Você está na tela inicial do Sistema Escolar.</p>
       <hr class="my-4">
-      <p>Primeiro nos conte o que deseja fazer:</p>
-      <p class="lead">
-        <a class="btn btn-primary btn-lg btn-block" data-toggle="modal" data-target="#primeiroAcesso" role="button">Primeiro Acesso</a>
-        <a class="btn btn-primary btn-lg btn-block" data-toggle="modal" data-target="#entraSistema" role="button">Entrar no sistema</a>
-      </p>
+      <p>Página em desenvolvimento :)</p>
+      <p>Visite a aba da SECRETARIA e faça login para ver as funcionalidades do sistema.</p>
+      <p><b>Caso queria testar as funções do sistema, envie um e-mail para gustavo@resende.app</b></p>
     </div>
   </div>
 
