--- a/public/secretaria/index.html
+++ b/public/secretaria/index.html
@@ -125,11 +125,11 @@
             </button> -->
           </div>
           <div class="modal-body" id="corpo">
-            <form id="addLivroTabela">
+            <form id="formBuscaResponsavel">
               <div class="form-row">
                 <div class="form-group col-md-6">
-                  <label for="inputPassword4">Digite o CPF do responsável cadastrado</label>
-                    <input type="text" class="form-control" id="nomeLivroAdd" name="nomeLivroAdd" placeholder="Nome do livro (Ex.: Aprendendo Inglês - Edição para Crianças)">
+                  <label for="cpfBuscaResponsavel">Digite o CPF do responsável cadastrado</label>
+                    <input type="text" class="form-control" id="cpfBuscaResponsavel" name="cpfBuscaResponsavel" placeholder="Númdero de CPF do Responsável">
                 </div>
               </div>
               <button type="submit" class="btn btn-primary btn-block">Procurar</button>
