Procura de responsáveis autorizados completa
Agora é possível procurar por responsáveis autorizados dos alunos, bem como cadastrá-los.

--- a/public/secretaria/index.html
+++ b/public/secretaria/index.html
@@ -129,7 +129,7 @@
               <div class="form-row">
                 <div class="form-group col-md-6">
                   <label for="cpfBuscaResponsavel">Digite o CPF do responsável cadastrado</label>
-                    <input type="text" class="form-control" id="cpfBuscaResponsavel" name="cpfBuscaResponsavel" placeholder="Númdero de CPF do Responsável">
+                    <input type="text" class="form-control" id="cpfBuscaResponsavel" name="cpfBuscaResponsavel" placeholder="Número de CPF do Responsável">
                 </div>
               </div>
               <button type="submit" class="btn btn-primary btn-block">Procurar</button>
