--- a/public/secretaria/index.html
+++ b/public/secretaria/index.html
@@ -1139,7 +1139,7 @@
                   </div>
                   <div class="form-group col-auto">
                     <label for="inputPassword4">CPF</label>
-                    <input type="text" class="form-control" id="cpfAluno" name="cpfAluno" placeholder="CPF" onchange="verificaCPF(this.value)" required>
+                    <input type="text" class="form-control" id="cpfAluno" name="cpfAluno" placeholder="CPF" onchange="verificaCPF(this)" required>
                     <small id="cpfHelp" class="form-text text-muted">Digite um CPF válido, existe um algoritmo de validação neste campo.</small>
                   </div>
                 </div>
@@ -1245,7 +1245,7 @@
                   </div>
                   <div class="form-group col-auto">
                     <label for="inputPassword4">CPF</label>
-                    <input type="text" class="form-control" id="cpfResponsavel1" name="cpfResponsavel1" placeholder="CPF" onchange="verificaCPF(this.value)">
+                    <input type="text" class="form-control" id="cpfResponsavel1" name="cpfResponsavel1" placeholder="CPF" onchange="verificaCPF(this)">
                     <small id="cpfHelp" class="form-text text-muted">Digite um CPF válido, existe um algoritmo de validação neste campo.</small>
                   </div>
                   
@@ -1292,7 +1292,7 @@
                   </div>
                   <div class="form-group col-auto">
                     <label for="inputPassword4">CPF</label>
-                    <input type="text" class="form-control" id="cpfResponsavel2" name="cpfResponsavel2" placeholder="CPF" onchange="verificaCPF(this.value)">
+                    <input type="text" class="form-control" id="cpfResponsavel2" name="cpfResponsavel2" placeholder="CPF" onchange="verificaCPF(this)">
                     <small id="cpfHelp" class="form-text text-muted">Digite um CPF válido, existe um algoritmo de validação neste campo.</small>
                   </div>
                   &nbsp;&nbsp;&nbsp;
@@ -1342,7 +1342,7 @@
                   </div>
                   <div class="form-group col-auto">
                     <label for="inputPassword4">CPF</label>
-                    <input type="text" class="form-control" id="cpfFinanceiroAluno" name="cpfFinanceiroAluno"  placeholder="CPF" onchange="verificaCPF(this.value)">
+                    <input type="text" class="form-control" id="cpfFinanceiroAluno" name="cpfFinanceiroAluno"  placeholder="CPF" onchange="verificaCPF(this)">
                     <small id="cpfHelp4" class="form-text text-muted">Digite um CPF válido, existe um algoritmo de validação neste campo.</small>
                   </div>
                 </div>
@@ -1384,7 +1384,7 @@
                   </div>
                   <div class="form-group col-auto">
                     <label for="inputPassword4">CPF</label>
-                    <input type="text" class="form-control" id="cpfPedagogicoAluno" name="cpfPedagogicoAluno" placeholder="CPF" onchange="verificaCPF(this.value)">
+                    <input type="text" class="form-control" id="cpfPedagogicoAluno" name="cpfPedagogicoAluno" placeholder="CPF" onchange="verificaCPF(this)">
                     <small id="cpfHelp3" class="form-text text-muted">Digite um CPF válido, existe um algoritmo de validação neste campo.</small>
                   </div>
                 </div>
