imagem do aluno funcionando
Também já imprimindo dados básicos do aluno

--- a/public/resources/pdfsProntos/documento.html
+++ b/public/resources/pdfsProntos/documento.html
@@ -10,7 +10,7 @@
             margin: 0;
             padding: 0;
             background-color: #FAFAFA;
-            font: 12pt "Tahoma";
+            font: 12pt "Arial";
         }
 
         * {
@@ -129,20 +129,11 @@
                 </table>
                 <p></p>
                 <p><br /><br /></p>
+                
                 <table border="1" style="height: 58px; width: 100%; vertical-align: top; margin-left: auto; margin-right: auto; border-style: inset; border-collapse: collapse;">
-                    <tbody>
-                        <tr style="height: 25px;">
-                            <td style="min-width: 140px; width: 99.8407%; height: 25px; text-align: center;" colspan="2"><label id="tituloSecao"></label></td>
-                        </tr>
-                        <section id="dadosTabela">
-                            <tr style="height: 33px;">
-                                <td style="min-width: 140px; height: 33px; width: 25.7961%;">nome</td>
-                                <td style="height: 33px; width: 74.0446%;">dados</td>
-                            </tr>
-                        </section>
-                        <tr>
-                            <td style="min-width: 140px; width: 25.7961%; text-align: right;" colspan="2"><label id="dadosFinais"></label></td>
-                        </tr>
+                    <p style="text-align: center; width: 100%;"><b><label id="tituloSecao"></label></b></p>
+                    <tbody id="dadosTabela">
+                        
                     </tbody>
                 </table>
                 <hr />
