--- a/public/resources/pdfsProntos/documento.html
+++ b/public/resources/pdfsProntos/documento.html
@@ -22,8 +22,8 @@
         .page {
             width: 21cm;
             min-height: 29.7cm;
-            padding: 1cm;
-            margin: 1cm auto;
+            padding: 0.3cm;
+            margin: 0.3cm auto;
             border: 1px #D3D3D3 solid;
             border-radius: 5px;
             background: white;
@@ -33,7 +33,7 @@
         .subpage {
             padding: 0.5cm;
             height: 256mm;
-            outline: 2cm #ffffff solid;
+            outline: 2cm #ffffff00 solid;
         }
 
         @page {
@@ -141,6 +141,7 @@
                         
                     </tbody>
                 </table>
+                <section id='espacoFinal'></section>
                 <hr />
                 <table border="1" style="width: 100%; border-collapse: collapse; border-style: dotted; margin-left: auto; margin-right: auto;">
                     <tbody>
