--- a/public/resources/pdfsProntos/modeloBoleto.html
+++ b/public/resources/pdfsProntos/modeloBoleto.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Boleto</title>
 </head>
 <body>
     <table style="height: 179px; width: 100%; border-collapse: collapse; border-style: solid;" border="1">
         <tbody>
             <tr style="height: 10px; border-style: none;">
                 <td style="width: 4.97079%; height: 179px;" rowspan="9">&nbsp;</td>
-                <td style="width: 22.9045%; height: 20px; text-align: center;" rowspan="2"><br />
+                <td style="width: 22.9045%; height: 20px; text-align: center;" rowspan="2">
                 <table style="height: 100%; width: 96.3454%; border-collapse: collapse; border-style: hidden;" border="1">
                 <tbody>
                 <tr style="height: 18px;">
