Alteração na function cadastra aluno
Também alterações na secretaria para envio de dados

--- a/public/professores/index.html
+++ b/public/professores/index.html
@@ -232,7 +232,7 @@
       </div>
       <div class="row">
         <nav class="col-md-2 d-none d-md-block bg-light sidebar">
-          <div class="sidebar-sticky">
+          <div class="sidebar-sticky" id="sidebar">
             <ul class="nav flex-column">
               <li class="nav-item">
                 <a class="nav-link active" data-toggle="list" href="#abaDashboard" role="tab" aria-controls="home">
